--- a/MyCity4Kids/MyCity4Kids/res/layout/fragment_rewards.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/fragment_rewards.xml
@@ -287,9 +287,9 @@
                     android:id="@+id/textReferral"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
+                    android:layout_alignParentTop="true"
                     android:layout_marginLeft="8dp"
-                    android:drawableLeft="@drawable/ic_share_icon"
+                    android:drawableLeft="@drawable/ic_share_icon_image"
                     android:drawablePadding="15dp"
                     android:drawableTint="@color/black"
                     android:padding="@dimen/space_20"
