--- a/MyCity4Kids/MyCity4Kids/res/layout/campaign_payment_modes_fragment.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/campaign_payment_modes_fragment.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white">
@@ -12,7 +11,6 @@
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
         android:minHeight="?attr/actionBarSize"
-        app:layout_constraintTop_toTopOf="parent"
         app:theme="@style/ToolbarTheme"
         app:titleTextAppearance="@style/ToolbarTheme.Title">
 
@@ -36,27 +34,24 @@
         android:name="com.mycity4kids.ui.campaign.fragment.CampaignAddProofFragment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@id/toolbar"
         android:layout_marginTop="@dimen/space_10"
-        android:background="@color/white"
-        app:layout_constraintBottom_toTopOf="@+id/relativeBottom"
-        app:layout_constraintTop_toBottomOf="@id/toolbar"
-        app:layout_constraintVertical_bias="0.0"
-        tools:layout_editor_absoluteX="0dp" />
+        android:background="@color/white" />
 
-    <RelativeLayout
-        android:id="@+id/relativeBottom"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent">
+        android:layout_alignParentBottom="true"
+        android:orientation="vertical">
 
         <com.mycity4kids.widget.CustomFontTextView
             android:id="@+id/saveContinueTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+
             android:layout_marginLeft="20dp"
             android:layout_marginTop="20dp"
             android:layout_marginRight="15dp"
-            android:layout_marginBottom="10dp"
             android:background="@color/app_red"
             android:gravity="center_horizontal"
             android:paddingLeft="35dp"
@@ -74,16 +69,15 @@
             android:id="@+id/textLater"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/saveContinueTextView"
             android:layout_marginLeft="20dp"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="@dimen/space_10"
             android:layout_marginRight="15dp"
-            android:layout_marginBottom="10dp"
+            android:layout_marginBottom="20dp"
             android:gravity="center"
             android:text="Maybe Later"
             android:textColor="@color/app_red"
             android:textSize="15sp" />
+    </LinearLayout>
+</RelativeLayout>
 
-    </RelativeLayout>
-</android.support.constraint.ConstraintLayout>
 
