--- a/MyCity4Kids/MyCity4Kids/res/layout/fragment_rewards_personal_info.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/fragment_rewards_personal_info.xml
@@ -9,9 +9,7 @@
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:clipToPadding="false"
-        tools:layout_editor_absoluteX="57dp"
-        tools:layout_editor_absoluteY="0dp">
+        android:clipToPadding="false">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -813,11 +811,12 @@
                 <RelativeLayout
                     android:id="@+id/referralMainLayout"
                     android:layout_width="match_parent"
-                    android:layout_height="110dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
-                    android:visibility="visible"
+                    android:layout_marginBottom="@dimen/space_10"
                     android:background="@drawable/shape_rectangle_light_red"
-                    android:paddingTop="5dp">
+                    android:paddingTop="5dp"
+                    android:visibility="visible">
 
                     <com.mycity4kids.widget.CustomFontTextView
                         android:id="@+id/referHeader"
@@ -840,6 +839,29 @@
                         app:layout_constraintHorizontal_bias="1.0"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/view_6" />
+
+                    <!-- <com.mycity4kids.widget.CustomFontEditText
+                         android:id="@+id/editReferralCode"
+                         android:layout_width="match_parent"
+                         android:layout_height="@dimen/space_40"
+                         android:layout_alignParentEnd="true"
+                         android:layout_alignParentRight="true"
+                         android:layout_centerVertical="true"
+                         android:layout_marginStart="20dp"
+                         android:layout_marginLeft="20dp"
+                         android:layout_marginTop="50dp"
+                         android:layout_marginEnd="0dp"
+                         android:layout_marginRight="0dp"
+                         android:background="@drawable/shape_rectangle_light_grey_boder_white_solid"
+                         android:gravity="center_vertical"
+                         android:hint="REFERRAL CODE(Optional)"
+                         android:lineSpacingExtra="2.2dp"
+                         android:paddingStart="15dp"
+                         android:paddingLeft="15dp"
+                         android:textAllCaps="true"
+                         android:textColor="@color/app_light_black"
+                         app:fontName="oswald_regular.ttf" />-->
+
 
                     <com.mycity4kids.widget.CustomFontEditText
                         android:id="@+id/editReferralCode"
@@ -887,11 +909,30 @@
                         android:layout_below="@+id/editReferralCode"
                         android:layout_marginStart="20dp"
                         android:layout_marginLeft="20dp"
-                        android:layout_marginTop="1dp"
+                        android:layout_marginTop="5dp"
                         android:layout_marginEnd="@dimen/space_15"
                         android:layout_marginRight="@dimen/space_15"
                         android:lineSpacingExtra="1.3dp"
                         android:textColor="@color/campaign_refer_code_error"
+                        android:textSize="13sp"
+                        android:visibility="visible"
+                        app:fontName="open_sans.ttf" />
+
+
+                    <com.mycity4kids.widget.CustomFontTextView
+                        android:id="@+id/textReferCode"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/textReferCodeError"
+                        android:layout_marginStart="20dp"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginTop="1dp"
+                        android:layout_marginEnd="@dimen/space_15"
+                        android:layout_marginRight="@dimen/space_15"
+                        android:lineSpacingExtra="1.3dp"
+                        android:paddingBottom="@dimen/space_10"
+                        android:text="Rs 25 will be paid out once you successfully complete a MyMoney campaign."
+                        android:textColor="@color/input_text_color"
                         android:textSize="13sp"
                         android:visibility="visible"
                         app:fontName="open_sans.ttf" />
@@ -908,7 +949,7 @@
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="20dp"
                 android:layout_marginRight="20dp"
-                android:layout_marginBottom="10dp"
+                android:layout_marginBottom="30dp"
                 android:background="@color/app_red"
                 android:gravity="center"
                 android:text="@string/save_continue"
