--- a/MyCity4Kids/MyCity4Kids/res/layout/pancard_detail_submission_fragment.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/pancard_detail_submission_fragment.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,7 +11,6 @@
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
         android:minHeight="?attr/actionBarSize"
-        app:layout_constraintTop_toTopOf="parent"
         app:theme="@style/ToolbarTheme"
         app:titleTextAppearance="@style/ToolbarTheme.Title">
 
@@ -35,11 +34,8 @@
         android:id="@+id/relativeLayout2"
         android:layout_width="match_parent"
         android:layout_height="140dp"
-        android:background="@color/white"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/toolbar">
+        android:layout_below="@id/toolbar"
+        android:background="@color/white">
 
         <com.mycity4kids.widget.CustomFontTextView
             android:id="@+id/enterPanCardDetailsTextView"
@@ -76,12 +72,10 @@
         android:id="@+id/noteTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/relativeLayout2"
         android:layout_marginLeft="@dimen/space_10"
         android:layout_marginRight="@dimen/space_10"
-        android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/relativeLayout2">
+        android:orientation="horizontal">
 
         <com.mycity4kids.widget.CustomFontTextView
             android:layout_width="wrap_content"
@@ -98,42 +92,43 @@
             android:textSize="16sp" />
     </LinearLayout>
 
-    <com.mycity4kids.widget.CustomFontTextView
-        android:id="@+id/submitTextView"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginRight="15dp"
-        android:layout_marginBottom="10dp"
-        android:background="@color/app_red"
-        android:gravity="center_horizontal"
-        android:paddingLeft="35dp"
-        android:paddingTop="12dp"
-        android:paddingRight="35dp"
-        android:paddingBottom="12dp"
-        android:text="@string/save_continue"
-        android:textColor="@color/white"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        app:fontName="oswald_regular.ttf"
-        app:layout_constraintBottom_toTopOf="@+id/textLater"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:layout_alignParentBottom="true"
+        android:orientation="vertical">
 
-    <com.mycity4kids.widget.CustomFontTextView
-        android:id="@+id/textLater"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginBottom="28dp"
-        android:gravity="center_horizontal"
-        android:text="Maybe Later"
-        android:textColor="@color/app_red"
-        android:textSize="14sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.486"
-        app:layout_constraintStart_toStartOf="parent" />
-</android.support.constraint.ConstraintLayout>
+        <com.mycity4kids.widget.CustomFontTextView
+            android:id="@+id/submitTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_above="@id/textLater"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginBottom="@dimen/space_10"
+            android:background="@color/app_red"
+            android:gravity="center_horizontal"
+            android:paddingLeft="35dp"
+            android:paddingTop="12dp"
+            android:paddingRight="35dp"
+            android:paddingBottom="12dp"
+            android:text="@string/save_continue"
+            android:textColor="@color/white"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:fontName="oswald_regular.ttf" />
+
+        <com.mycity4kids.widget.CustomFontTextView
+            android:id="@+id/textLater"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginBottom="28dp"
+            android:gravity="center"
+            android:text="Maybe Later"
+            android:textColor="@color/app_red"
+            android:textSize="14sp" />
+    </LinearLayout>
+</RelativeLayout>
