--- a/MyCity4Kids/MyCity4Kids/res/layout/private_profile_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/private_profile_activity.xml
@@ -266,7 +266,7 @@
                 <com.mycity4kids.widget.RoundedHorizontalProgressBar
                     android:id="@+id/progress_bar_1"
                     style="?android:attr/progressBarStyleHorizontal"
-                    android:layout_width="wrap_content"
+                    android:layout_width="200dp"
                     android:layout_height="6dp"
                     android:layout_below="@+id/profileCompletionLabel"
                     android:layout_alignParentLeft="true"
@@ -303,6 +303,7 @@
                     android:layout_below="@+id/profileCompletionLabel"
                     android:layout_marginRight="10dp"
                     android:layout_toLeftOf="@+id/updateProfileTextView"
+                    android:layout_toRightOf="@id/progress_bar_1"
                     android:text=""
                     android:textColor="@color/app_light_black"
                     app:fontName="oswald_regular.ttf" />
