--- a/MyCity4Kids/MyCity4Kids/res/layout/campaign_payment_modes_fragment.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/campaign_payment_modes_fragment.xml
@@ -74,7 +74,7 @@
             android:layout_marginRight="15dp"
             android:layout_marginBottom="20dp"
             android:gravity="center"
-            android:text="Maybe Later"
+            android:text="@string/campaign_maybe_later_text"
             android:textColor="@color/app_red"
             android:textSize="15sp" />
     </LinearLayout>
