--- a/MyCity4Kids/MyCity4Kids/res/layout/fragment_rewards_social_info.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/fragment_rewards_social_info.xml
@@ -572,7 +572,7 @@
                 android:layout_marginRight="15dp"
                 android:layout_marginBottom="10dp"
                 android:gravity="center"
-                android:text="Maybe Later"
+                android:text="@string/campaign_maybe_later_text"
                 android:textColor="@color/app_red"
                 android:textSize="15sp" />
 
