--- a/MyCity4Kids/MyCity4Kids/res/layout/contact_details_layout.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/contact_details_layout.xml
@@ -86,13 +86,15 @@
 
             <com.mycity4kids.widget.CustomFontTextView
                 android:id="@+id/changePasswordTextView"
-                android:layout_width="50sp"
+                android:layout_width="wrap_content"
                 android:layout_height="30sp"
                 android:layout_alignParentRight="true"
                 android:layout_marginTop="22dp"
                 android:layout_marginRight="5dp"
                 android:background="@drawable/button_round"
                 android:gravity="center"
+                android:paddingLeft="@dimen/space_15"
+                android:paddingRight="@dimen/space_15"
                 android:text="@string/ad.comments.edit_label"
                 android:textColor="@color/white"
                 android:textSize="14sp"
