--- a/MyCity4Kids/MyCity4Kids/res/layout/profile_about_layout.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/profile_about_layout.xml
@@ -18,6 +18,7 @@
         android:layout_height="match_parent"
         android:background="@color/white"
         android:orientation="vertical">
+
         <com.mycity4kids.widget.CustomFontTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -27,22 +28,24 @@
             android:textColor="@color/app_grey"
             android:textSize="14sp"
             app:fontName="oswald_regular.ttf" />
+
         <com.mycity4kids.widget.CustomFontEditText
             android:id="@+id/fullNameEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
             android:layout_marginTop="5dp"
+            android:layout_marginRight="20dp"
             android:background="@drawable/mainprofile_thin_border"
             android:hint=""
             android:inputType="textNoSuggestions"
-            android:paddingBottom="15dp"
             android:paddingLeft="5dp"
             android:paddingTop="15dp"
+            android:paddingBottom="15dp"
             android:textColor="@color/app_light_black"
             android:textSize="16dp"
             app:fontName="oswald_regular.ttf" />
+
         <com.mycity4kids.widget.CustomFontTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -52,50 +55,57 @@
             android:textColor="@color/app_grey"
             android:textSize="14sp"
             app:fontName="oswald_regular.ttf" />
+
         <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
-            android:layout_marginRight="15dp"
             android:layout_marginTop="5dp"
+            android:layout_marginRight="15dp"
             android:background="@drawable/mainprofile_thin_border">
+
             <com.mycity4kids.widget.CustomFontTextView
                 android:id="@+id/emailTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
                 android:layout_marginTop="10dp"
-                android:paddingBottom="10dp"
                 android:paddingLeft="5dp"
                 android:paddingTop="10dp"
+                android:paddingBottom="10dp"
                 android:textColor="@color/app_light_black"
                 android:textSize="16dp"
                 app:fontName="oswald_regular.ttf" />
+
             <com.mycity4kids.widget.CustomFontTextView
                 android:id="@+id/passwordTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/emailTextView"
-                android:layout_marginBottom="5dp"
                 android:layout_marginLeft="5dp"
                 android:layout_marginTop="4dp"
+                android:layout_marginBottom="5dp"
                 android:paddingLeft="5dp"
                 android:text="*********"
                 app:fontName="oswald_regular.ttf" />
+
             <com.mycity4kids.widget.CustomFontTextView
                 android:id="@+id/changePasswordTextView"
-                android:layout_width="50sp"
+                android:layout_width="wrap_content"
                 android:layout_height="30sp"
                 android:layout_alignParentRight="true"
-                android:layout_marginRight="5dp"
                 android:layout_marginTop="22dp"
+                android:layout_marginRight="5dp"
                 android:background="@drawable/button_round"
                 android:gravity="center"
+                android:paddingLeft="@dimen/space_15"
+                android:paddingRight="@dimen/space_15"
                 android:text="@string/ad.comments.edit_label"
                 android:textColor="@color/white"
                 android:textSize="14sp"
                 app:fontName="oswald_regular.ttf" />
         </RelativeLayout>
+
         <com.mycity4kids.widget.CustomFontTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -105,13 +115,14 @@
             android:textAllCaps="true"
             android:textColor="@color/app_grey"
             app:fontName="oswald_regular.ttf" />
+
         <com.mycity4kids.widget.PrefixEditText
             android:id="@+id/phoneEditText"
             android:layout_width="match_parent"
             android:layout_height="57dp"
             android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
             android:layout_marginTop="5dp"
+            android:layout_marginRight="20dp"
             android:background="@drawable/mainprofile_thin_border"
             android:gravity="center_vertical"
             android:inputType="number"
@@ -119,6 +130,7 @@
             android:tag="+91"
             android:textColor="@color/app_light_black"
             app:fontName="oswald.ttf" />
+
         <com.mycity4kids.widget.CustomFontTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -127,20 +139,22 @@
             android:text="@string/location"
             android:textColor="@color/app_grey"
             app:fontName="oswald_regular.ttf" />
+
         <com.mycity4kids.widget.CustomFontTextView
             android:id="@+id/cityTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
             android:layout_marginTop="5dp"
+            android:layout_marginRight="20dp"
             android:background="@drawable/mainprofile_thin_border"
             android:inputType="text"
-            android:paddingBottom="15dp"
             android:paddingLeft="10dp"
             android:paddingTop="15dp"
+            android:paddingBottom="15dp"
             android:textColor="@color/app_light_black"
             app:fontName="oswald_regular.ttf" />
+
         <com.mycity4kids.widget.CustomFontTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -149,21 +163,23 @@
             android:text="@string/blog_setup.blog_title_label"
             android:textColor="@color/app_grey"
             app:fontName="oswald_regular.ttf" />
+
         <com.mycity4kids.widget.CustomFontTextView
             android:id="@+id/handleNameTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
             android:layout_marginTop="5dp"
+            android:layout_marginRight="20dp"
             android:background="@drawable/mainprofile_thin_border"
             android:gravity="center_vertical"
-            android:paddingBottom="10dp"
             android:paddingLeft="10dp"
             android:paddingTop="10dp"
+            android:paddingBottom="10dp"
             android:textColor="@color/app_light_black"
             android:textSize="14sp"
             app:fontName="oswald_regular.ttf" />
+
         <com.mycity4kids.widget.CustomFontTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -174,13 +190,14 @@
             android:textColor="@color/app_light_black"
             android:textSize="18sp"
             app:fontName="oswald_regular.ttf" />
+
         <com.mycity4kids.widget.CustomFontEditText
             android:id="@+id/aboutEditText"
             android:layout_width="match_parent"
             android:layout_height="100dp"
             android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
             android:layout_marginTop="3dp"
+            android:layout_marginRight="16dp"
             android:background="@drawable/about_user_bg"
             android:gravity="top"
             android:hint="@string/write_about_yourself"
@@ -192,6 +209,7 @@
             android:scrollbars="vertical"
             android:textColor="@color/app_light_black"
             android:textSize="16sp" />
+
         <com.mycity4kids.widget.CustomFontTextView
             android:id="@+id/childDetailTitleTextView"
             android:layout_width="wrap_content"
@@ -204,12 +222,13 @@
             android:textColor="@color/app_light_black"
             android:textSize="16sp"
             app:fontName="oswald_regular.ttf" />
+
         <LinearLayout
             android:id="@+id/childInfoContainer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
-        </LinearLayout>
+            android:orientation="vertical"></LinearLayout>
+
         <com.mycity4kids.widget.CustomFontTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -220,21 +239,23 @@
             android:textColor="@color/app_light_black"
             android:textSize="16sp"
             app:fontName="oswald_regular.ttf" />
+
         <RelativeLayout
             android:id="@+id/addKidContainer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
             android:layout_marginTop="3dp"
+            android:layout_marginRight="16dp"
             android:background="@drawable/kids_container_border">
+
             <com.mycity4kids.widget.CustomFontEditText
                 android:id="@+id/kidNameEditText"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:layout_marginLeft="16dp"
-                android:layout_marginRight="16dp"
                 android:layout_marginTop="20dp"
+                android:layout_marginRight="16dp"
                 android:background="@drawable/mainprofile_thin_border"
                 android:gravity="center_vertical"
                 android:hint="@string/name_optional"
@@ -243,6 +264,7 @@
                 android:paddingLeft="8dp"
                 android:textColor="#000"
                 android:textSize="14sp" />
+
             <TextView
                 android:id="@+id/gender"
                 android:layout_width="wrap_content"
@@ -252,6 +274,7 @@
                 android:text="@string/app_settings.edit_profile.gender"
                 android:textColor="@color/app_grey"
                 android:textSize="14sp" />
+
             <TextView
                 android:id="@+id/dobLabelTextView"
                 android:layout_width="wrap_content"
@@ -261,37 +284,41 @@
                 android:text="@string/dob"
                 android:textColor="@color/app_grey"
                 android:textSize="14sp" />
+
             <android.support.v7.widget.AppCompatSpinner
                 android:id="@+id/genderSpinner"
                 android:layout_width="135dp"
                 android:layout_height="40dp"
                 android:layout_below="@id/gender"
-                android:layout_marginBottom="18dp"
-                android:layout_marginLeft="16dp"
-                android:layout_marginRight="8dp"
                 android:layout_marginStart="16dp"
+                android:layout_marginLeft="16dp"
                 android:layout_marginTop="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginBottom="18dp"
                 android:background="@drawable/mainprofile_thin_border" />
+
             <ImageView
                 android:layout_width="14dp"
                 android:layout_height="14dp"
-                android:layout_alignRight="@id/genderSpinner"
                 android:layout_alignTop="@+id/genderSpinner"
-                android:layout_marginRight="12dp"
+                android:layout_alignRight="@id/genderSpinner"
                 android:layout_marginTop="12dp"
+                android:layout_marginRight="12dp"
                 android:src="@drawable/arrowdownnew" />
+
             <com.mycity4kids.widget.CustomFontTextView
                 android:id="@+id/kidsDOBTextView"
                 android:layout_width="100dp"
                 android:layout_height="40dp"
                 android:layout_below="@id/dobLabelTextView"
-                android:layout_marginBottom="18dp"
-                android:layout_marginLeft="200dp"
                 android:layout_marginStart="200dp"
+                android:layout_marginLeft="200dp"
                 android:layout_marginTop="8dp"
+                android:layout_marginBottom="18dp"
                 android:background="@drawable/mainprofile_thin_border"
                 android:gravity="center"
                 android:textColor="#000" />
+
             <com.mycity4kids.widget.CustomFontTextView
                 android:id="@+id/addNewKidTextView"
                 android:layout_width="wrap_content"
@@ -301,10 +328,10 @@
                 android:layout_marginBottom="10dp"
                 android:background="@drawable/button_round"
                 android:gravity="center"
-                android:paddingBottom="8dp"
                 android:paddingLeft="16dp"
-                android:paddingRight="16dp"
                 android:paddingTop="8dp"
+                android:paddingRight="16dp"
+                android:paddingBottom="8dp"
                 android:text="@string/app_settings.edit_prefs.add"
                 android:textColor="@color/white" />
         </RelativeLayout>
