--- a/MyCity4Kids/MyCity4Kids/res/layout/fragment_rewards_social_info.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/fragment_rewards_social_info.xml
@@ -73,7 +73,7 @@
                     android:hint="@string/rewards_facebook_handler"
                     android:paddingTop="10dp"
                     android:paddingBottom="10dp"
-                    android:textAllCaps="true"
+                    android:inputType="textCapCharacters"
                     android:textColor="@color/app_grey"
                     android:textColorHint="@color/app_red"
                     android:textSize="18sp"
