--- a/MyCity4Kids/MyCity4Kids/res/layout/pancard_detail_submission_fragment.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/pancard_detail_submission_fragment.xml
@@ -56,13 +56,12 @@
             android:layout_marginRight="20dp"
             android:background="@drawable/campaign_border_round_rectangular_layout"
             android:hint=""
-            android:inputType="textNoSuggestions"
+            android:inputType="textNoSuggestions|textCapCharacters"
             android:maxLength="11"
             android:paddingStart="15dp"
             android:paddingLeft="15dp"
             android:paddingTop="15dp"
             android:paddingBottom="15dp"
-            android:textAllCaps="true"
             android:textColor="@color/app_light_black"
             android:textSize="16dp"
             app:fontName="oswald_regular.ttf" />
